--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,28 +1,24 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
-
 <header class="hero-unit" id="banner">
   <div class="container">
     <h1>Android Device Farm</h1>
     <p class="lead">Share your device with your co-workers.</p>
   </div>
 </header>
-
-<div class="container">
+<div id="main" class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Connected devices:</h1>
+      <h1 class="page-header">Status by Device</h1>
       <ul class="nav nav-tabs nav-stacked" ng-repeat="device in devices">
-        <li><a href="#" tooltip="{{device.info}}">{{device.name}} adb connect {{device.ipaddress}}:{{device.port}} {{device.serial}}<button type="button" class="close" ng-click="deleteDevice(device)">&times;</button></a></li>
+        <li>
+          <a href="devices/{{device.serial}}" tooltip="{{device.info}}">
+            {{device.name}} 
+            <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
+            <span> {{device.whoused}}</span>
+            <button type="button" class="close" ng-click="deleteDevice(device)">&times;</button>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
-
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <p>
-        <a href="http://skplanet.com">SK planet</a> |
-         <a href="http://wiki.skplanet.co.kr/display/SQE">SQE Team</a></p>
-  </div>
-</footer>
