--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -15,7 +15,6 @@
             <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
             <span data-ng-repeat="tag in device.tags">[{{tag}}] </span>
             <span> {{device.ip}}</span>
-            <!-- <button type="button" class="close" data-ng-click="deleteDevice(device)">&times;</button> -->
           </a>
         </li>
         <div ng-if="false" data-ng-repeat-end></div>
@@ -32,8 +31,8 @@
             <span> | {{client.type}} | </span>
             <span>{{client.ip}}</span>
             <span ng-if="client.type!='web'">| {{client.deviceName}}  
-              <span class="label state" data-ng-class="{'label-warning': client.deviceName, 'label-success': !client.deviceName}"><i class="fa" data-ng-class="{'fa-check': !!client.deviceName}"> {{client.deviceName ? "in use" : "waiting"}}</i></span>
-              <button ng-if="client.deviceName" type="button" class="close" data-ng-click="deleteClient(client)">&times;</button>
+              <span class="label state" data-ng-class="{'label-warning': client.state==='in use', 'label-success': !client.deviceName}"><i class="fa" data-ng-class="{'fa-check': client.state==='in use'}"> {{client.state}}</i></span>
+              <button ng-if="client.deviceName && user && (user.role === 'admin') " type="button" class="close" data-ng-click="deleteClient(client)">&times;</button>
             </span>
             
         </li>
