--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,14 +8,12 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Connected Devices</h1>
-      <ul class="nav nav-pills nav-stacked">
+      <ul class="nav">
         <li data-ng-repeat-start="device in devices">
-          <a href="devices/{{device.serial}}" tooltip="{{device.info}}">
-            {{device.name}} 
-            <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
-            <span data-ng-repeat="tag in device.tags">[{{tag}}] </span>
-            <span> {{device.ip}}</span> {{device.whoused}}
-          </a>
+          <span><a href="/devices/{{device.serial}}">{{device.name}}</a></span>
+          <span data-ng-repeat="tag in device.tags">[{{tag}}] </span>
+          <span>{{device.ip}}</span> {{device.whoused}}
+          <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
         </li>
         <div ng-if="false" data-ng-repeat-end></div>
       </ul>
@@ -34,7 +32,6 @@
               <span class="label state" data-ng-class="{'label-warning': client.state==='in use', 'label-success': !client.deviceName}"><i class="fa" data-ng-class="{'fa-check': client.state==='in use'}"> {{client.state}}</i> </span>
               <button ng-if="(client.state==='in use') && (user.role === 'admin')" type="button" class="close" data-ng-click="deleteClient(client)">&times;</button>
             </span>
-            
         </li>
       </ul>
     </div>
