--- a/client/index.html
+++ b/client/index.html
@@ -79,6 +79,9 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/device/device.controller.js"></script>
+          <script src="app/device/device.detail.controller.js"></script>
+          <script src="app/device/device.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/useage/useage.controller.js"></script>
