--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -10,7 +10,7 @@
       <h1 class="page-header">Connected Devices</h1>
       <ul class="nav">
         <li data-ng-repeat-start="device in devices">
-          <span><a href="/devices/{{device.serial}}">{{device.name}}</a></span>
+          <span><a href="/devices/{{device._id}}">{{device.name}}</a></span>
           <span data-ng-repeat="tag in device.tags">[{{tag}}] </span>
           <span>{{device.ip}}</span> {{device.whoused}}
           <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
