--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -7,13 +7,12 @@
 <div id="main" class="container">
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Connected Devices</h1>
+      <h1 class="page-header">Available Devices</h1>
       <ul class="nav">
         <li data-ng-repeat-start="device in devices">
           <span><a href="/devices/{{device._id}}">{{device.name}}</a></span>
-          <span data-ng-repeat="tag in device.tags">[{{tag}}] </span>
-          <span>{{device.ip}}</span> {{device.whoused}}
-          <span class="label state" data-ng-class="{'label-warning': device.whoused, 'label-success': !device.whoused}"><i class="fa" data-ng-class="{'fa-check': !!device.whoused}"> {{device.whoused ? "in use" : "available"}}</i></span>
+          <!-- <span data-ng-repeat="tag in device.tags">[{{tag}}] </span> -->
+          <span class="label state" data-ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}"><i class="fa" data-ng-class="{'fa-check': !!device.jobid}"> {{device.jobid ? "in use" : "available"}}</i></span>
         </li>
         <div ng-if="false" data-ng-repeat-end></div>
       </ul>
@@ -22,9 +21,10 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Connected Clients</h1>
+      <h1 class="page-header">Client Queue ({{clients.length}})</h1>
       <ul class="list-group">
         <li class="list-group-item" ng-repeat="client in clients">
+            <span>{{$index+1}}</span>
             <span>{{client.dispConnDate}}</span>
             <span> | {{client.type}} | </span>
             <span>{{client.ip}}</span>
