--- a/client/app/device/device.detail.html
+++ b/client/app/device/device.detail.html
@@ -45,7 +45,7 @@
   <div class="history">
     <h2>History</h2>
     <ul>
-      <li ng-repeat="log in logs | orderBy:'-dispDate'">
+      <li ng-repeat="log in logs | orderBy:'-dispDate' | limitTo:10">
         {{log.dispDate}} - {{log.state}} - {{log.jenkinsJobUrl}}
       </li>
     </ul>
