상단 메뉴바 스타일 변경 및 device 페이지 추가

--- a/client/index.html
+++ b/client/index.html
@@ -28,7 +28,7 @@
 
     <!-- Add your site or application content here -->
     <div ng-include="'components/navbar/navbar.html'"></div>
-    <div ui-view=""></div>
+    <div class="container" ui-view></div>
     <footer class="footer">
       <div class="container">
           <p>
