--- a/client/app/device/device.html
+++ b/client/app/device/device.html
@@ -1,3 +1,15 @@
-<div class="col-md-12">
-This is the device view.
+<div class="container">
+
+  <div ng-repeat="device in devices">
+    <div class="float-box photo clickable" ng-click="go(device._id)">
+        <img src='{{device.photoUrl}}'>
+        <div class="deviceInfo">
+          <h4>{{device.name}}</h4>
+          <ul class="tags nav nav-pill nav-stacked">
+            <li ng-repeat="tag in device.tags">{{tag}}</li>
+          </ul>
+        </div>
+    </div>
+  </div>
+
 </div>
