--- a/client/app/device/device.html
+++ b/client/app/device/device.html
@@ -5,7 +5,7 @@
         <img src='{{device.photoUrl}}'>
         <div class="deviceInfo">
           <h4>{{device.name}}</h4>
-          <ul class="tags nav nav-pill nav-stacked">
+          <ul class="tags nav nav-stacked">
             <li ng-repeat="tag in device.tags">{{tag}}</li>
           </ul>
         </div>
