--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -8,13 +8,12 @@
   <div class="row">
     <div class="col-lg-12">
       <h1 class="page-header">Available Devices</h1>
-      <ul class="nav">
-        <li data-ng-repeat-start="device in devices">
+      <ul class="nav nav-pills">
+        <li ng-repeat-start="device in devices">
           <span><a href="/devices/{{device._id}}">{{device.name}}</a></span>
-          <!-- <span data-ng-repeat="tag in device.tags">[{{tag}}] </span> -->
-          <span class="label state" data-ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}"><i class="fa" data-ng-class="{'fa-check': !!device.jobid}"> {{device.jobid ? "in use" : "available"}}</i></span>
+          <span class="label state" ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}"><i ng-class="{'fa fa-check': !!device.jobid}">{{device.jobid ? "in use" : "available"}}</i></span>
         </li>
-        <div ng-if="false" data-ng-repeat-end></div>
+        <div ng-if="false" ng-repeat-end></div>
       </ul>
     </div>
   </div>
