--- a/client/app/device/device.html
+++ b/client/app/device/device.html
@@ -1,5 +1,4 @@
-<div class="container">
-
+<div class="container device-list">
   <div ng-repeat="device in devices">
     <div class="float-box photo clickable" ng-click="go(device._id)">
         <img src='{{device.photoUrl}}'>
@@ -11,5 +10,4 @@
         </div>
     </div>
   </div>
-
 </div>
