디바이스 로그가 위에서 아래로 쌓이도록 변경과 동시에 자동 스크롤 다운 추가

--- a/client/index.html
+++ b/client/index.html
@@ -67,6 +67,7 @@
       <script src="bower_components/angular-socket-io/socket.js"></script>
       <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
       <script src="bower_components/moment/moment.js"></script>
+      <script src="bower_components/angularjs-scroll-glue/src/scrollglue.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
