--- a/client/app/device/device.detail.html
+++ b/client/app/device/device.detail.html
@@ -44,11 +44,14 @@
 
   <div class="history">
     <h2>History</h2>
-    <ul>
-      <li ng-repeat="log in logs | filter:findDeviceSerial | orderBy:'-date' | limitTo:15">
-        {{log.dispDate}} - {{log.state}} - <a href='{{log.jenkinsJobUrl}}'>{{log.jenkinsJobUrl}}</a>
-      </li>
-    </ul>
+
+    <div class='logs' scroll-glue>
+      <ul>
+        <li ng-repeat="log in logs | filter:findDeviceSerial | orderBy:'date'">
+          {{log.dispDate}} - {{log.state}} <a href='{{log.jenkinsJobUrl}}'>{{log.jenkinsJobUrl}}</a>
+        </li>
+      </ul>
+    </div>
   </div>
   
 
