--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -11,7 +11,7 @@
       <ul class="nav nav-pills">
         <li ng-repeat-start="device in devices">
           <span><a href="/devices/{{device._id}}">{{device.name}}</a></span>
-          <span class="label state" ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}"><i ng-class="{'fa fa-check': !!device.jobid}">{{device.jobid ? "in use" : "available"}}</i></span>
+          <span class="label state" ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}"><i ng-class="{'fa fa-check': !!device.jobid}"></i>{{device.jobid ? "in use" : "available"}}</span>
         </li>
         <div ng-if="false" ng-repeat-end></div>
       </ul>
@@ -20,18 +20,19 @@
 
   <div class="row">
     <div class="col-lg-12">
-      <h1 class="page-header">Client Queue ({{clients.length}})</h1>
+      <h1 class="page-header">Client Queue</h1>
       <ul class="list-group">
-        <li class="list-group-item" ng-repeat="client in clients">
-            <span>{{$index+1}}</span>
-            <span>{{client.dispConnDate}}</span>
-            <span> | {{client.type}} | </span>
-            <span>{{client.ip}}</span>
-            <span>| {{client.deviceName}}
-              <span class="label state" data-ng-class="{'label-warning': client.state==='in use', 'label-success': !client.deviceName}"><i class="fa" data-ng-class="{'fa-check': client.state==='in use'}"> {{client.state}}</i> </span>
-              <a href="{{client.jobid}}">{{client.requestTag}}</a>
-              <button ng-if="(client.state==='in use') && (user.role === 'admin')" type="button" class="close" data-ng-click="deleteClient(client)">&times;</button>
-            </span>
+        <li class="list-group-item" ng-repeat="client in clients | filter:findWaitingClients">
+          <span>{{client.dispConnDate}}</span>
+          <span> | {{client.type}} | </span>
+          <span>{{client.ip}}</span>
+          <span>| {{client.deviceName}}
+            <span class="label state" ng-class="{'label-warning': client.state==='processing', 'label-success': !client.deviceName}"><i ng-class="{'fa fa-check': client.state==='processing'}"> {{client.state}}</i></span>
+            
+            <a href="{{client.jobid}}">{{client.requestTag}}</a>
+
+            <button ng-if="(client.state==='processing') && (user.role === 'admin')" type="button" class="close" ng-click="deleteClient(client)">&times;</button>
+          </span>
         </li>
       </ul>
     </div>
