adb에러를 찾기위한 할당 버그 롤백

--- a/client/app/device/device.detail.html
+++ b/client/app/device/device.detail.html
@@ -47,8 +47,8 @@
 
     <div class='logs' scroll-glue>
       <ul>
-        <li ng-repeat="log in logs | filter:findDeviceSerial | orderBy:'date'">
-          {{log.dispDate}} - {{log.state}} <a href='{{log.jenkinsJobUrl}}'>{{log.jenkinsJobUrl}}</a>
+        <li ng-repeat="log in logs | filter:findDeviceSerial | orderBy:'date'" ng-class="{seperate:'log.state==='finding device'}">
+          {{log.dispDate}} - {{log.state}} <a ng-show="log.state==='assigned'" href='{{log.jenkinsJobUrl}}'>{{log.jenkinsJobUrl}}</a>
         </li>
       </ul>
     </div>
