angular-styleguide에 따른 리팩토링

--- a/client/index.html
+++ b/client/index.html
@@ -85,6 +85,8 @@
           <script src="app/device/device.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/services/device.service.js"></script>
+          <script src="app/services/devicelog.service.js"></script>
           <script src="app/useage/useage.controller.js"></script>
           <script src="app/useage/useage.js"></script>
           <script src="components/auth/auth.service.js"></script>
