--- a/client/app/device/device.detail.html
+++ b/client/app/device/device.detail.html
@@ -57,7 +57,7 @@
 
     <div class='logs' scroll-glue>
       <ul>
-        <li ng-repeat="log in logs | filter:findDeviceSerial | orderBy:'date'" ng-class="{'seperate':log.state === 'released'}">
+        <li ng-repeat="log in logs | orderBy:'date'" ng-class="{'seperate':log.state === 'released'}">
           {{log.dispDate}} {{log.state}} <span ng-hide="log.state==='assigned'">{{log.message}}</span> <a ng-show="log.state==='assigned'" href='{{log.message}}'>{{log.message.split('job/')[1]}}</a>
         </li>
       </ul>
