--- a/client/index.html
+++ b/client/index.html
@@ -80,11 +80,12 @@
           <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
-          <script src="app/device/device.controller.js"></script>
-          <script src="app/device/device.detail.controller.js"></script>
-          <script src="app/device/device.js"></script>
-          <script src="app/main/main.controller.js"></script>
-          <script src="app/main/main.js"></script>
+          <script src="app/device/detail/device.detail.js"></script>
+          <script src="app/device/device.router.js"></script>
+          <script src="app/device/list/device.list.js"></script>
+          <script src="app/home/home.js"></script>
+          <script src="app/home/home.route.js"></script>
+          <script src="app/services/client.service.js"></script>
           <script src="app/services/device.service.js"></script>
           <script src="app/services/devicelog.service.js"></script>
           <script src="app/useage/useage.controller.js"></script>
