--- a/client/index.html
+++ b/client/index.html
@@ -88,10 +88,9 @@
           <script src="app/services/client.service.js"></script>
           <script src="app/services/device.service.js"></script>
           <script src="app/services/devicelog.service.js"></script>
-          <script src="app/useage/useage.controller.js"></script>
-          <script src="app/useage/useage.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
+          <script src="components/lib/readable-range.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
           <script src="components/navbar/navbar.controller.js"></script>
           <script src="components/socket/socket.service.js"></script>
