--- a/client/app/device/detail/device.detail.html
+++ b/client/app/device/detail/device.detail.html
@@ -1,6 +1,7 @@
-<div class="container">
+<section class="device-detail">
   <div class="float-box photo">
     <img src='{{device.photoUrl}}'>
+    <strong><i class="fa fa-circle status" ng-class="{'connected':device.isConnected, 'used':device.jobid}"></i> {{device.name}}</strong>
     <button ng-click='openPhotoUrlEditor()'>단말 사진 수정</button>
   </div>
   <div class="float-box deviceInfo">
@@ -22,6 +23,7 @@
   <div class="float-box control-box" ng-show="device.jobid">
     <div class="input-group">
       <h4>사용중인 Jenkins Job</h4>
+      <div>{{spendTime}}</div>
       <a href="{{device.jobid}}">{{device.jobid.split('job/')[1]}}</a>
       <button class="btn btn-danger" ng-click="disconnetDevice()">연결 끊기</button>
     </div>
@@ -63,4 +65,4 @@
       </ul>
     </div>
   </div>
-</div>
+</section>
