--- a/client/app/device/detail/device.detail.html
+++ b/client/app/device/detail/device.detail.html
@@ -5,7 +5,7 @@
       <strong>
         <i class="fa fa-circle status" ng-class="{'connected':device.isConnected, 'used':device.jobid}"></i> {{device.name}}
       </strong>
-      <button ng-click='openPhotoUrlEditor()'>단말 사진 수정</button>
+      <button ng-show="isAdmin" ng-click='openPhotoUrlEditor()'>단말 사진 수정</button>
     </div>
   </div>
   <div class="float-box deviceInfo">
@@ -13,7 +13,7 @@
     <ul class="tags nav nav-pill nav-stacked">
       <li ng-repeat="tag in device.tags">{{tag}}</li>
     </ul>
-    <button ng-click='openTagEditor()'>태그 수정</button>
+    <button ng-show="isAdmin" ng-click='openTagEditor()'>태그 수정</button>
   </div>
   <div class="float-box managerInfo">
     <h4>단말 관리자</h4>
@@ -29,7 +29,9 @@
       <h4>사용중인 Jenkins Job</h4>
       <div>{{spendTime}}</div>
       <a href="{{device.jobid}}">{{device.jobid.split('job/')[1]}}</a>
-      <button class="btn btn-danger" ng-click="disconnetDevice()">연결 끊기</button>
+      <div>
+        <button class="btn btn-danger" ng-show="isAdmin" ng-click="disconnetDevice()">연결 끊기</button>
+      </div>
     </div>
   </div>
 
