--- a/client/index.html
+++ b/client/index.html
@@ -74,17 +74,13 @@
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="app/app.js"></script>
           <!-- injector:js -->
-          <script src="app/account/account.js"></script>
-          <script src="app/account/login/login.controller.js"></script>
+          <script src="app/account/login/login.js"></script>
           <script src="app/account/settings/settings.controller.js"></script>
-          <script src="app/account/signup/signup.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
-          <script src="app/admin/admin.js"></script>
           <script src="app/device/detail/device.detail.js"></script>
-          <script src="app/device/device.router.js"></script>
           <script src="app/device/list/device.list.js"></script>
           <script src="app/home/home.js"></script>
-          <script src="app/home/home.route.js"></script>
+          <script src="app/router.js"></script>
           <script src="app/services/client.service.js"></script>
           <script src="app/services/device.service.js"></script>
           <script src="app/services/devicelog.service.js"></script>
@@ -92,7 +88,7 @@
           <script src="components/auth/user.service.js"></script>
           <script src="components/lib/readable-range.js"></script>
           <script src="components/mongoose-error/mongoose-error.directive.js"></script>
-          <script src="components/navbar/navbar.controller.js"></script>
+          <script src="components/navbar/navbar.js"></script>
           <script src="components/socket/socket.service.js"></script>
           <!-- endinjector -->
         <!-- endbuild -->
