--- a/client/app/home/home.html
+++ b/client/app/home/home.html
@@ -10,10 +10,10 @@
       <li ng-repeat-start="device in devices">
         <img src="{{device.photoUrl}}" />
         <div>
-          <span><a href="/devices/{{device._id}}">{{device.name}}</a></span>
-          <span class="label state" ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}">
+          <a href="/devices/{{device._id}}">{{device.name}}</a>
+          <label class="label state" ng-class="{'label-warning': device.jobid, 'label-success': !device.jobid}">
             <i ng-class="{'fa fa-check': !!device.jobid}"></i>{{device.jobid ? "in use" : "available"}}
-          </span>
+          </label>
         </div>
       </li>
       <div ng-if="false" ng-repeat-end></div>
